--- a/_assets/css/buttons.css
+++ b/_assets/css/buttons.css
@@ -1,37 +1,8 @@
-.button {
-    display: inline-block;
-    padding: 0.5em 1.5em;
-    background-color: var(--color-link-default);
-    color: var(--color-body-background);
-    border-radius: 0.3em;
-    border: 1px solid transparent;
-}
-
-.button:hover {
-    background-color: var(--color-body-background);
-    color: var(--color-link-default);
-    border-color: var(--color-link-default);
-}
-
-
-.button-secondary {
-    background-color: var(--color-body-background);
-    color: var(--color-link-default);
-    border-color: var(--color-link-default);
-}
-
-.button-secondary:hover {
-    text-decoration: underline;
-}
-
-.button-wrapper {
-    display: flex;
-}
-
-.button-wrapper .button {
-    display: block;
-}
-
-.button-wrapper .button + .button {
-    margin-left: 1em;
+input[type="submit"] {
+    background: var(--color-beige-main);
+    padding: 1em 2em;
+    border: 2px solid var(--color-beige-main);
+    border-radius: 4em;
+    cursor: pointer;
+    box-shadow: 0 0 0.2em 0 rgba(0, 0, 0, 0.2);
 }
