--- a/_assets/css/variables.css
+++ b/_assets/css/variables.css
@@ -2,12 +2,13 @@
     --font-size-body: 14px;
     --font-size-body-larger: 16px;
     --font-size-body-big: 18px;
-    --font-size-body-huge: 20px;
+    /*--font-size-body-huge: 20px;*/
 
     --font-main: 'Merriweather';
     --font-headers: 'Barlow Condensed';
 
     --layout-main-width: 100%;
+    --layout-content-width: 85%;
 
     --color-body-background: #FFFFFF;
     --color-red-main: #AA3F44;
