--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -4,10 +4,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 10em;
+    margin-bottom: 1.5em;
 }
 
 .site-header.home-page {
     background: transparent;
+    margin-bottom: 0;
 }
 
 .site-title {
