--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -38,7 +38,7 @@
         </aside>
 
         <footer class="site-footer">
-            <p>All rights reserved &copy; {{ site.title }}</p>
+            <p>All rights reserved &copy; <a href="/" class="title">{{ site.title }}</a></p>
         </footer>
 
     </div>
