--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -22,7 +22,7 @@
 
            {% include navigation.html %}
 
-            <a href="#" class="login-button"><i class="far fa-user"></i></a>
+            <a href="{{ site.baseurl }}/profile" class="login-button"><i class="far fa-user"></i></a>
             <a href="#" class="hamburger-menu"><i class="fas fa-bars"></i></a>
 
         </header>
@@ -38,7 +38,7 @@
         </aside>
 
         <footer class="site-footer">
-            <p>All rights reserved &copy; <a href="/" class="title">{{ site.title }}</a></p>
+            <p>All rights reserved &copy; <a href="{{ site.baseurl }}" class="title">{{ site.title }}</a></p>
         </footer>
 
     </div>
