--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="site-nav">
     <ul>
         {% for item in site.pages %}
-            {% if item.title %}
+            {% if item.title and item.main-nav == 1 %}
             <li {% if item.url == page.url %} class="selected" {% endif %}>
                 <a href="{{ site.baseurl }}{{ item.url }}">
                     {{ item.title }}
