Add our fleet page

--- a/_assets/css/site.css
+++ b/_assets/css/site.css
@@ -9,6 +9,7 @@
 @import "footer.css";
 
 @import "forms.css";
-@import "contacts.css";
+@import "contact-us.css";
 @import "profile.css";
+@import "our-fleet.css";
 
