--- a/docs/css/contact-us.css
+++ b/docs/css/contact-us.css
@@ -51,7 +51,7 @@
 }
 
 /* Media */
-.media {
+.info .media {
     position: relative;
     width: 100%;
     height: 100%;
@@ -59,7 +59,7 @@
     border-radius: 0.5em;
 }
 
-.media img {
+.info .media img {
     position: absolute;
     top: 50%;
     left: 50%;
