--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 
-    <script src="{{ site.baseurl }}/scripts/app.js"></script>
 </head>
 <body>
 
@@ -31,6 +30,10 @@
 
             {{content}}
 
+            <a href="#" class="go-top">
+                <img src="../images/go-top.png" alt="Go Top">
+                <span>Go Top</span>
+            </a>
         </main>
 
         <aside class="site-sidebar">
@@ -44,4 +47,7 @@
     </div>
 
 </body>
+
+<script src="{{ site.baseurl }}/scripts/app.js"></script>
+
 </html>
