--- a/_assets/css/layout.css
+++ b/_assets/css/layout.css
@@ -2,6 +2,18 @@
     max-width: var(--layout-main-width);
 }
 
+.site.black-background:after {
+    display: block;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+
 .content-wrapper {
     max-width: var(--layout-content-width);
     margin: 0 auto;
