--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -1,18 +1,503 @@
-@import "variables.css";
-@import "typography.css";
+@import url("https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700|Merriweather:400,700&display=swap");
+:root {
+  --font-size-body: 14px;
+  --font-size-body-larger: 16px;
+  --font-size-body-big: 18px;
+  /*--font-size-body-huge: 20px;*/
+  --font-main: 'Merriweather';
+  --font-headers: 'Barlow Condensed';
+  --layout-main-width: 100%;
+  --layout-content-width: 80%;
+  --color-body-background: #FFFFFF;
+  --color-red-main: #AA3F44;
+  --color-beige-main: #D3C19F;
+  --color-beige-darker: #D3C19F;
+  --spacing-layout-elements: 2em; }
 
-@import "buttons.css";
+*, *:before, *:after {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit; }
 
-@import "layout.css";
-@import "header.css";
-@import "navigation.css";
-@import "footer.css";
+html {
+  box-sizing: border-box;
+  font: var(--font-size-body, 14px)/1.5 var(--font-main), sans-serif; }
 
-@import "forms.css";
-@import "contact-us.css";
-@import "profile.css";
-@import "our-fleet.css";
-@import "destinations.css";
+@media (min-width: 600px) {
+  html {
+    font-size: var(--font-size-body-larger, 16px); } }
 
-@import "go-top.css";
+@media (min-width: 1024px) {
+  html {
+    font-size: var(--font-size-body-big, 18px); } }
 
+/*@media (min-width: 1600px) {*/
+/*    html {*/
+/*        font-size: var(--font-size-body-huge, 20px);*/
+/*    }*/
+/*}*/
+body, input, textarea, option, select, table {
+  font: inherit;
+  background: var(--color-body-background, #FFFFFF);
+  color: var(--color-body-text, #000000); }
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: 1em;
+  font-weight: bold;
+  line-height: 1.2;
+  margin-bottom: 1em;
+  font-family: var(--font-headers), sans-serif; }
+
+h1 {
+  font-size: 2.6em; }
+
+h2 {
+  font-size: 2.2em; }
+
+h3 {
+  font-size: 1.8em; }
+
+h4 {
+  font-size: 1.4em; }
+
+h5 {
+  font-size: 1.2em; }
+
+h6 {
+  font-size: 1em; }
+
+a {
+  text-decoration: none;
+  color: var(--color-beige-main, #000000); }
+
+p, blockquote, ul, ol {
+  padding-bottom: 1.5em; }
+
+blockquote {
+  border-left: 2px solid #CCCCCC;
+  padding-left: 2em;
+  font-style: italic;
+  opacity: 0.8; }
+
+blockquote p:last-child {
+  padding-bottom: 0;
+  text-align: right; }
+
+.cleaner:after {
+  display: block;
+  content: '';
+  clear: both; }
+
+input[type="submit"] {
+  background: var(--color-beige-main);
+  padding: 1em 2em;
+  border: 2px solid var(--color-beige-main);
+  border-radius: 4em;
+  cursor: pointer;
+  box-shadow: 0 0 0.2em 0 rgba(0, 0, 0, 0.2); }
+
+input[type="submit"]:hover {
+  background: var(--color-red-main);
+  color: var(--color-body-background);
+  border-color: var(--color-red-main); }
+
+.site {
+  max-width: var(--layout-main-width); }
+
+.site.black-background:after {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8); }
+
+.content-wrapper {
+  max-width: var(--layout-content-width);
+  margin: 0 auto; }
+
+@media (min-width: 1024px) {
+  .site-header {
+    display: flex; }
+  .site-nav {
+    margin-left: auto; } }
+
+.site-header {
+  background: var(--color-body-background);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10em;
+  margin-bottom: 1.5em; }
+
+.site-header.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  box-shadow: 0 0 0.3em 0 var(--color-beige-main); }
+
+.site-header.home-page {
+  background: transparent;
+  margin-bottom: 0; }
+
+.site-title {
+  margin-bottom: 0; }
+
+.site-header a.user-button {
+  color: #000000;
+  font-size: 1.1em; }
+
+.site-header a.user-button:hover > i {
+  color: var(--color-beige-main); }
+
+.site-header a.hamburger-menu {
+  display: none; }
+
+.site-nav {
+  margin: 0 auto; }
+
+.site-nav ul {
+  display: flex;
+  margin: 0;
+  padding: 0; }
+
+.site-nav ul li {
+  display: block;
+  list-style: none outside;
+  padding: 0 1em; }
+
+.site-nav ul li a {
+  display: block;
+  color: #000000; }
+
+.site-nav ul li.selected > a,
+.site-nav ul li a:hover {
+  color: var(--color-beige-main); }
+
+.site-footer {
+  padding: 0.8em 0;
+  background: var(--color-red-main);
+  color: var(--color-body-background);
+  text-align: center; }
+  .site-footer p {
+    padding: 0; }
+  .site-footer .title {
+    color: var(--color-beige-main); }
+
+form input:not([type="submit"]),
+form textarea {
+  background: #FFFFFF;
+  padding: 1.1em 1.4em;
+  border: 1px solid rgba(0, 0, 0, 0.1); }
+
+form input {
+  border-radius: 4em; }
+
+form textarea {
+  resize: none;
+  border-radius: 2em;
+  height: 10em; }
+
+.info {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5em;
+  padding: var(--spacing-layout-elements) 0; }
+
+.info h3 {
+  text-align: center; }
+
+.info li {
+  list-style: none outside;
+  margin-bottom: 1em; }
+
+/* Opening Hours */
+.opening-hours ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.opening-hours ul li .day {
+  width: 6em; }
+
+.opening-hours ul li .line {
+  display: inline-block;
+  width: 7em;
+  height: 2px;
+  background: var(--color-beige-main);
+  margin: 0 auto; }
+
+/* Central Office */
+.central-office .contact-info {
+  text-align: center; }
+
+.central-office .contact-info li a {
+  color: #000000; }
+
+.central-office .contact-info li i {
+  display: inline-block;
+  width: 1.5em;
+  margin-right: 0.5em;
+  color: var(--color-beige-main);
+  text-align: center; }
+
+.central-office .contact-info li:hover i {
+  color: var(--color-red-main); }
+
+.central-office .contact-info li address {
+  display: inline; }
+
+.central-office .social-buttons {
+  display: flex;
+  justify-content: space-around; }
+
+.central-office .social-buttons li {
+  background: var(--color-beige-main);
+  padding: 0.3em;
+  border-radius: 0.5em; }
+
+.central-office .social-buttons li a i {
+  width: 1.5em;
+  font-size: 1.5em;
+  text-align: center;
+  color: var(--color-body-background);
+  margin: 0; }
+
+.central-office .social-buttons li:hover {
+  background: var(--color-red-main); }
+
+/* Media */
+.info .media {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 0.5em; }
+
+.info .media img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+/* Form */
+.contact-us {
+  background: #F6F4EF; }
+
+.contact-us .content-wrapper {
+  padding: var(--spacing-layout-elements) 0;
+  text-align: center; }
+
+.contact-us .content-wrapper form {
+  max-width: 60%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: var(--spacing-layout-elements); }
+
+.contact-us form input {
+  grid-column: span 2; }
+
+.contact-us form textarea {
+  grid-column: span 4; }
+
+.contact-us form input[type="submit"] {
+  grid-column: 2 / 4; }
+
+.profile {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #FFFFFF;
+  z-index: 100;
+  border-radius: 0.5em; }
+
+.profile-buttons {
+  padding: 0 1em 0 0;
+  display: flex;
+  align-items: center; }
+
+.profile-buttons a.clicked,
+.profile-buttons a:not(.close-button):hover {
+  background: var(--color-red-main);
+  color: var(--color-body-background); }
+
+.log-in-button {
+  border-top-left-radius: 0.5em; }
+
+.log-in-button,
+.sign-up-button {
+  margin-right: 0.5em;
+  padding: 0.5em 1.5em;
+  color: var(--color-red-main); }
+
+.profile-buttons .close-button {
+  margin-left: auto;
+  color: var(--color-red-main);
+  font-size: 1.2em; }
+
+.profile-forms {
+  padding: var(--spacing-layout-elements); }
+
+.sign-up {
+  display: none; }
+
+.sign-up form,
+.log-in form {
+  display: grid;
+  grid-gap: var(--spacing-layout-elements); }
+
+.sign-up form label,
+.log-in form label {
+  display: block; }
+
+.log-in form {
+  grid-template-columns: 1fr; }
+
+.sign-up form {
+  grid-template-columns: repeat(4, 1fr); }
+
+.sign-up form p {
+  grid-column: span 2; }
+
+.sign-up form input[type='submit'] {
+  grid-column: 2 / 4; }
+
+.fleet-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 4em; }
+
+.fleet-card .media img,
+.fleet-card .description {
+  box-shadow: 0 0 0.2em 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.3em; }
+
+.fleet-card .media {
+  width: 30em;
+  position: relative;
+  overflow: hidden; }
+
+.fleet-card .media:before {
+  display: block;
+  content: '';
+  padding-top: 56.25%; }
+
+.fleet-card .media img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+
+.fleet-card .description {
+  width: 25em;
+  padding: 2em; }
+
+.fleet-card .description .airplane-name {
+  color: var(--color-beige-main);
+  margin-bottom: 0.5em; }
+
+.fleet-card:nth-child(even) .description .airplane-name {
+  color: var(--color-red-main); }
+
+.fleet-card .description .airplane-info {
+  padding-bottom: 0; }
+
+.destinations {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: var(--spacing-layout-elements);
+  justify-content: center;
+  padding: var(--spacing-layout-elements) 0;
+  margin: 0; }
+
+.destinations li {
+  list-style: none outside;
+  overflow: hidden;
+  position: relative;
+  border-radius: 0.5em;
+  box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, 0.5); }
+
+.destinations li:before {
+  display: block;
+  content: '';
+  padding-top: 56.25%; }
+
+.destinations li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+
+.destinations li a img {
+  display: block;
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.destinations li a:hover:before {
+  display: block;
+  content: '';
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 5;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.destinations li a:hover > .destination-name {
+  width: 100%;
+  text-align: center;
+  color: #FFFFFF;
+  z-index: 6;
+  position: absolute;
+  opacity: 1;
+  text-shadow: 0.1em 0.1em #000000;
+  font-size: 1.3em;
+  text-transform: uppercase;
+  letter-spacing: 0.05em; }
+
+.go-top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: fixed;
+  bottom: 1em;
+  right: 1em;
+  background: var(--color-beige-main);
+  border-radius: 50%;
+  width: 5em;
+  height: 5em;
+  opacity: 0; }
+
+.go-top img {
+  margin-bottom: 0.5em; }
+
+.go-top span {
+  color: #000000;
+  text-transform: uppercase;
+  font-family: var(--font-headers);
+  font-weight: 700;
+  letter-spacing: 0.05em; }
+
+.go-top:hover img {
+  padding-bottom: 0.5em; }
