--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -207,7 +207,7 @@ form textarea {
   grid-gap: 5em;
   padding: var(--spacing-layout-elements) 0; }
 
-.info h3 {
+.info header h3 {
   text-align: center; }
 
 .info li {
