--- a/_assets/scss/_our-fleet.scss
+++ b/_assets/scss/_our-fleet.scss
@@ -3,7 +3,24 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 4em;
+
+    opacity: 0;
+    transform: translateX(-10em);
+
+    animation: slideIn 0.5s ease-in;
+    animation-fill-mode: forwards;
+
+    &.slide-from-right {
+        transform: translateX(10em);
+    }
+
+    @for $i from 1 through 7 {
+        &:nth-of-type(#{$i}) {
+            animation-delay: $i * 0.5s;
+        }
+    }
 }
+
 
 .fleet-card .media img,
 .fleet-card .description {
