--- a/_assets/scss/_animations.scss
+++ b/_assets/scss/_animations.scss
@@ -1,4 +1,4 @@
-@keyframes slideIn {
+@keyframes slideInHorizontal {
     from {
 
     }
@@ -6,5 +6,17 @@
     to {
         transform: translateX(0);
         opacity: 1;
+    }
+}
+
+@keyframes slideInVertical {
+    from {
+        opacity: 0;
+        transform: translateY(-2em);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
