--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -389,33 +389,30 @@ form textarea {
   margin-bottom: 4em;
   opacity: 0;
   transform: translateX(-10em);
-  -webkit-animation: slideInHorizontal 0.5s ease-in;
-          animation: slideInHorizontal 0.5s ease-in;
+  -webkit-animation: slideInHorizontal 0.5s linear;
+          animation: slideInHorizontal 0.5s linear;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards; }
   .fleet-card.slide-from-right {
     transform: translateX(10em); }
-  .fleet-card:nth-of-type(1) {
-    -webkit-animation-delay: 0.5s;
-            animation-delay: 0.5s; }
   .fleet-card:nth-of-type(2) {
-    -webkit-animation-delay: 1s;
-            animation-delay: 1s; }
+    -webkit-animation-delay: 0.6s;
+            animation-delay: 0.6s; }
   .fleet-card:nth-of-type(3) {
+    -webkit-animation-delay: 0.9s;
+            animation-delay: 0.9s; }
+  .fleet-card:nth-of-type(4) {
+    -webkit-animation-delay: 1.2s;
+            animation-delay: 1.2s; }
+  .fleet-card:nth-of-type(5) {
     -webkit-animation-delay: 1.5s;
             animation-delay: 1.5s; }
-  .fleet-card:nth-of-type(4) {
-    -webkit-animation-delay: 2s;
-            animation-delay: 2s; }
-  .fleet-card:nth-of-type(5) {
-    -webkit-animation-delay: 2.5s;
-            animation-delay: 2.5s; }
   .fleet-card:nth-of-type(6) {
-    -webkit-animation-delay: 3s;
-            animation-delay: 3s; }
+    -webkit-animation-delay: 1.8s;
+            animation-delay: 1.8s; }
   .fleet-card:nth-of-type(7) {
-    -webkit-animation-delay: 3.5s;
-            animation-delay: 3.5s; }
+    -webkit-animation-delay: 2.1s;
+            animation-delay: 2.1s; }
 
 .fleet-card .media img,
 .fleet-card .description {
@@ -576,7 +573,8 @@ form textarea {
   border-radius: 50%;
   width: 5em;
   height: 5em;
-  opacity: 0; }
+  opacity: 0;
+  z-index: 10; }
 
 .go-top img {
   margin-bottom: 0.5em; }
