--- a/_assets/scss/_animations.scss
+++ b/_assets/scss/_animations.scss
@@ -20,3 +20,9 @@
         transform: translateY(0);
     }
 }
+
+@keyframes slideInMain {
+    100% {
+        transform: translateX(30em);
+    }
+}
