--- a/_assets/scss/_buttons.scss
+++ b/_assets/scss/_buttons.scss
@@ -1,12 +1,17 @@
+button,
 input[type="submit"] {
     background: var(--color-beige-main);
+    color: #000000;
     padding: 1em 2em;
     border: 2px solid var(--color-beige-main);
     border-radius: 4em;
     cursor: pointer;
     box-shadow: 0 0 0.2em 0 rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    font-family: var(--font-main);
 }
 
+button:hover,
 input[type="submit"]:hover {
     background: var(--color-red-main);
     color: var(--color-body-background);
