--- a/_assets/scss/_header.scss
+++ b/_assets/scss/_header.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10em;
+    padding: 0.5em 10em;
     margin-bottom: 1.5em;
 }
 
@@ -16,7 +16,6 @@
 }
 
 .site-header.home-page {
-    background: transparent;
     margin-bottom: 0;
 }
 
