--- a/_assets/scss/site.scss
+++ b/_assets/scss/site.scss
@@ -8,6 +8,7 @@
 @import "_navigation.scss";
 @import "_footer.scss";
 
+@import "_home.scss";
 @import "_forms.scss";
 @import "_contact-us.scss";
 @import "_profile.scss";
