Update go top button image

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -33,7 +33,7 @@
             {% include profile.html %}
 
             <a href="#" class="go-top">
-                <img src="../images/go-top.png" alt="Go Top">
+                <img src="./images/go-top.png" alt="Go Top">
                 <span>Go Top</span>
             </a>
         </main>
