--- a/_assets/scss/_home.scss
+++ b/_assets/scss/_home.scss
@@ -99,6 +99,39 @@
     color: var(--color-beige-main);
 }
 
+// Newsletter
+.newsletter {
+    background: var(--color-red-main);
+    color: var(--color-body-background);
+}
+
+.newsletter .content-wrapper {
+    padding: var(--spacing-layout-elements) 0;
+    display: flex;
+    align-items: center;
+}
+
+.newsletter h3 {
+    margin-bottom: 0;
+}
+
+.newsletter form {
+    margin-left: auto;
+}
+
+.newsletter form input[type="submit"] {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    color: var(--color-body-background);
+}
+
+.newsletter form input[type="submit"]:hover {
+    transform: translate(1em, -1em);
+    color: var(--color-body-background);
+    background: var(--color-beige-main);
+    border-color: var(--color-beige-main);
+}
+
 // Frequently Asked Questions
 .faq {
     padding: var(--spacing-layout-elements) 0;
