--- a/_assets/scss/_home.scss
+++ b/_assets/scss/_home.scss
@@ -7,7 +7,7 @@
     overflow-x: hidden;
 }
 
-.clouds img{
+.clouds img {
     position: absolute;
     bottom: 0;
     left: -30em;
@@ -19,7 +19,7 @@
     animation-fill-mode: both;
 }
 
-.fog img{
+.fog img {
     position: absolute;
     bottom: 0;
     left: -30em;
@@ -41,62 +41,101 @@
     max-height: 100vh;
 }
 
-// Services
-.content-wrapper {
-    text-align: center;
-}
-
-.services {
+// Popular Destinations
+.popular-destinations {
     padding: var(--spacing-layout-elements) 0;
     background: #F6F4EF;
 }
 
-.services-info {
+.popular-destinations .flight-wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: var(--spacing-layout-elements);
 }
 
-.services-info .media {
+.flight-card {
+    border-radius: 0.5em;
+    border: 1px solid var(--color-beige-main);
     overflow: hidden;
 }
 
-.services-info .media,
-.services-info ul li {
-    border-radius: 0.5em;
-}
-
-.services-info .media img {
-    width: 100%;
-    display: block;
-}
-
-.services-info ul {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: var(--spacing-layout-elements);
-    padding-bottom: 0;
-}
-
-.services-info ul li {
-    list-style: none outside;
+.flight-card header {
     background: var(--color-body-background);
-    font-family: var(--font-headers);
-    text-transform: uppercase;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    color: #000000;
+    border-bottom: 1px solid var(--color-beige-main);
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+    padding: 1.5em 2em;
 }
 
-.services-info ul li h5 {
+.flight-card header h5 {
     margin-bottom: 0;
+    grid-column: span 2;
 }
 
-.services-info ul li i {
-    font-size: 2em;
+.flight-card header h5.from {
+    text-align: left;
+}
+
+.flight-card header h5.to {
+    text-align: right;
+}
+
+.flight-card header span i {
+    color: var(--color-red-main);
+}
+
+.flight-description {
+    background: var(--color-body-background);
+    padding: 1em 2em;
+}
+
+.flight-description li {
+    list-style: none outside;
     margin-bottom: 0.5em;
-    color: var(--color-beige-main);
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+}
+
+.flight-description li > span:first-child {
+    text-align: left;
+    grid-column: span 2;
+}
+
+.flight-description li > span:last-child {
+    text-align: right;
+    grid-column: span 2;
+}
+
+.flight-description .line {
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    background: var(--color-red-main);
+    margin: 0 auto;
+}
+
+.book-now {
+    padding: 1.5em 2em;
+    width: 100%;
+    background: var(--color-body-background);
+    border-top: 1px solid var(--color-beige-main);
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.book-now:hover {
+    background: var(--color-beige-main);
+}
+
+.book-now:hover a {
+    color: #000000;
+}
+
+.book-now a {
+    color: var(--color-red-main);
 }
 
 // Newsletter
@@ -137,7 +176,7 @@
     padding: var(--spacing-layout-elements) 0;
 }
 
-.faq ul {
+.questions-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: var(--spacing-layout-elements);
@@ -176,11 +215,16 @@
 
 .question-and-icons {
     display: flex;
+    align-items: center;
     pointer-events: none;
 }
 
 .question-and-icons {
     padding-bottom: 0;
+}
+
+.question-and-icons .question {
+    margin-bottom: 0;
 }
 
 .question-and-icons i {
