--- a/_assets/scss/site.scss
+++ b/_assets/scss/site.scss
@@ -9,6 +9,7 @@
 @import "_footer.scss";
 
 @import "_home.scss";
+@import "_about-us.scss";
 @import "_forms.scss";
 @import "_contact-us.scss";
 @import "_profile.scss";
