--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -98,8 +98,11 @@ input[type="submit"] {
   cursor: pointer;
   box-shadow: 0 0 0.2em 0 rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-in-out;
-  font-family: var(--font-main); }
+  font-family: var(--font-main);
+  outline: none; }
 
+button:focus,
+input[type="submit"]:focus,
 button:hover,
 input[type="submit"]:hover {
   background: var(--color-red-main);
@@ -242,6 +245,177 @@ input[type="submit"]:hover {
   max-width: 100%;
   max-height: 100vh; }
 
+.popular-destinations {
+  padding: var(--spacing-layout-elements) 0;
+  background: #F6F4EF; }
+
+.popular-destinations .flight-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: var(--spacing-layout-elements); }
+
+.flight-card {
+  border-radius: 0.5em;
+  border: 1px solid var(--color-beige-main);
+  overflow: hidden; }
+
+.flight-card header {
+  background: var(--color-body-background);
+  color: #000000;
+  border-bottom: 1px solid var(--color-beige-main);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+  padding: 1.5em 2em; }
+
+.flight-card header h5 {
+  margin-bottom: 0;
+  grid-column: span 2; }
+
+.flight-card header h5.from {
+  text-align: left; }
+
+.flight-card header h5.to {
+  text-align: right; }
+
+.flight-card header span i {
+  color: var(--color-red-main); }
+
+.flight-description {
+  background: var(--color-body-background);
+  padding: 1em 2em; }
+
+.flight-description li {
+  list-style: none outside;
+  margin-bottom: 0.5em;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center; }
+
+.flight-description li > span:first-child {
+  text-align: left;
+  grid-column: span 2; }
+
+.flight-description li > span:last-child {
+  text-align: right;
+  grid-column: span 2; }
+
+.flight-description .line {
+  display: inline-block;
+  width: 100%;
+  height: 2px;
+  background: var(--color-red-main);
+  margin: 0 auto; }
+
+.book-now {
+  padding: 1.5em 2em;
+  width: 100%;
+  background: var(--color-body-background);
+  border-top: 1px solid var(--color-beige-main);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out; }
+
+.book-now:hover {
+  background: var(--color-beige-main); }
+
+.book-now:hover a {
+  color: #000000; }
+
+.book-now a {
+  color: var(--color-red-main); }
+
+.newsletter {
+  background: var(--color-red-main);
+  color: var(--color-body-background); }
+
+.newsletter .content-wrapper {
+  padding: var(--spacing-layout-elements) 0;
+  display: flex;
+  align-items: center; }
+
+.newsletter h3 {
+  margin-bottom: 0; }
+
+.newsletter form {
+  margin-left: auto; }
+
+.newsletter form input[type="submit"] {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  color: var(--color-body-background); }
+
+.newsletter form input[type="submit"]:hover {
+  transform: translate(1em, -1em);
+  color: var(--color-body-background);
+  background: var(--color-beige-main);
+  border-color: var(--color-beige-main); }
+
+.faq {
+  padding: var(--spacing-layout-elements) 0; }
+
+.questions-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: var(--spacing-layout-elements);
+  padding-bottom: 0; }
+
+.questions-wrapper {
+  list-style: none outside;
+  background: #F6F4EF;
+  border-radius: 0.5em;
+  padding: 1.5em 2em;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out; }
+
+.questions-wrapper:hover {
+  background: var(--color-red-main);
+  color: var(--color-body-background); }
+
+.questions-wrapper:hover i {
+  color: var(--color-beige-main); }
+
+.questions-wrapper.active .answer {
+  display: block; }
+
+.questions-wrapper.active i.open {
+  display: none; }
+
+.questions-wrapper.active i.close {
+  display: block; }
+
+.question-and-icons {
+  display: flex;
+  align-items: center;
+  pointer-events: none; }
+
+.question-and-icons {
+  padding-bottom: 0; }
+
+.question-and-icons .question {
+  margin-bottom: 0; }
+
+.question-and-icons i {
+  margin-left: auto;
+  color: var(--color-red-main); }
+
+.question-and-icons i.close {
+  display: none; }
+
+.answer {
+  display: none;
+  padding-top: 1.5em;
+  padding-bottom: 0;
+  pointer-events: none; }
+
+.read-more {
+  margin-top: var(--spacing-layout-elements); }
+
+button {
+  font-size: 1.1em; }
+
+button i {
+  margin-left: 0.5em; }
+
 .content-wrapper {
   text-align: center; }
 
@@ -289,99 +463,18 @@ input[type="submit"]:hover {
   margin-bottom: 0.5em;
   color: var(--color-beige-main); }
 
-.newsletter {
-  background: var(--color-red-main);
-  color: var(--color-body-background); }
-
-.newsletter .content-wrapper {
-  padding: var(--spacing-layout-elements) 0;
-  display: flex;
-  align-items: center; }
-
-.newsletter h3 {
-  margin-bottom: 0; }
-
-.newsletter form {
-  margin-left: auto; }
-
-.newsletter form input[type="submit"] {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  color: var(--color-body-background); }
-
-.newsletter form input[type="submit"]:hover {
-  transform: translate(1em, -1em);
-  color: var(--color-body-background);
-  background: var(--color-beige-main);
-  border-color: var(--color-beige-main); }
-
-.faq {
-  padding: var(--spacing-layout-elements) 0; }
-
-.faq ul {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: var(--spacing-layout-elements);
-  padding-bottom: 0; }
-
-.questions-wrapper {
-  list-style: none outside;
-  background: #F6F4EF;
-  border-radius: 0.5em;
-  padding: 1.5em 2em;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out; }
-
-.questions-wrapper:hover {
-  background: var(--color-red-main);
-  color: var(--color-body-background); }
-
-.questions-wrapper:hover i {
-  color: var(--color-beige-main); }
-
-.questions-wrapper.active .answer {
-  display: block; }
-
-.questions-wrapper.active i.open {
-  display: none; }
-
-.questions-wrapper.active i.close {
-  display: block; }
-
-.question-and-icons {
-  display: flex;
-  pointer-events: none; }
-
-.question-and-icons {
-  padding-bottom: 0; }
-
-.question-and-icons i {
-  margin-left: auto;
-  color: var(--color-red-main); }
-
-.question-and-icons i.close {
-  display: none; }
-
-.answer {
-  display: none;
-  padding-top: 1.5em;
-  padding-bottom: 0;
-  pointer-events: none; }
-
-.read-more {
-  margin-top: var(--spacing-layout-elements); }
-
-button {
-  font-size: 1.1em; }
-
-button i {
-  margin-left: 0.5em; }
-
 form input:not([type="submit"]),
 form textarea {
   background: #FFFFFF;
   padding: 1.1em 1.4em;
-  border: 1px solid rgba(0, 0, 0, 0.1); }
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  outline: none; }
+
+form input:not([type="submit"]):focus,
+form textarea:focus,
+form input:not([type="submit"]):hover,
+form textarea:hover {
+  border-color: var(--color-red-main); }
 
 form input {
   border-radius: 4em; }
