Fixed label position

--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -710,7 +710,8 @@ form textarea {
 
 .sign-up form label,
 .log-in form label {
-  display: block; }
+  display: block;
+  margin-left: 1.4em; }
 
 .log-in form {
   grid-template-columns: 1fr; }
